# transmog

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CACHE_REFACTOR.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  RCA_python_314_failure.md  README.md  ROADMAP.md  TESTING_OVERHAUL.md  benchmark_results.json  context7.json  fix_indentation.py  mypy.ini  naming_convention_refactor.md  plytix_extract_daily.py  pyproject.toml  setup.cfg  setup.py  test_import.py  test_processor.py
.claude/commands/: eval-docs.md  eval-tests.md
.claude/rules/: no-pandas.md
.cursor/commands/: eval-docs.md  eval-params.md  eval-tests.md
.cursor/rules/: No-Pandas.mdc
.github/workflows/: benchmark.yml  deploy-docs.yml  deploy-pypi.yml  main.yml  publish-pypi.yml
docs/: README.md  api.md  arrays.md  conf.py  configuration.md  contributing.md  documentation_map.md  errors.md  getting_started.md  ids.md  index.md  installation.md  outputs.md  streaming.md  user_guide.md
docs/api/: config.md  core.md  csv-reader.md  error.md  io.md  naming.md  process.md  processing-result.md  processor.md  types.md
docs/api_reference/: api.md
docs/dev/: architecture.md  benchmarking.md  code-style.md  extending.md  release-process.md  testing.md
docs/developer_guide/: contributing.md  custom-configuration.md  extending.md  performance.md  streaming.md
docs/examples/: basic.md  csv-processing.md  csv_to_json_example.py  data_aggregation_example.py  data_cleanup_example.py  data_transform_example.py  data_validation_example.py  deterministic-id-example.md  multiple_formats_example.py  output-formats-example.md
docs/tutorials/: data-transformation.md
docs/user/: arrays.md  caching.md  concurrency.md  configuration.md  csv-processing.md  data-flow.md  deterministic-ids.md  error-handling.md  examples.md  flattening.md  getting-started.md  hierarchy.md  in-memory-processing.md  json-processing.md  json-transform.md  metadata.md  naming.md  output-formats.md  schema.md  strategies.md  streaming-parquet.md  streaming.md  transforms.md
docs/user_guide/: array-handling.md  error-handling.md  file-processing.md  id-management.md  output-formats.md
examples/: README.md  abbreviation_example.py  abbreviation_test.py  advanced_usage.py  config_example.py  conversion_modes_example.py  custom_naming_strategies.py  deterministic_id_examples.py  error_recovery_example.py  native_output_formats.py  natural_id_discovery_example.py  parallel_processing.py  partial_recovery_example.py  performance_comparison.py  recovery_strategy_comparison.py  simple_example.py  simple_flatten.py  streaming_example.py  streaming_parquet_example.py
examples/advanced/: abbreviation_example.py  advanced_abbreviation_example.py  advanced_usage.py  deep_nesting_example.py  deterministic_id_examples.py  deterministic_ids.py  error_handling.py  error_recovery_example.py  performance_comparison.py  performance_optimization.py  streaming_processing.py
examples/basic/: config_example.py  flattener_modes_example.py  naming_example.py  native_output_formats.py
examples/data/: csv_to_json_example.py  data_aggregation_example.py  data_cleanup_example.py  data_transform_example.py  data_validation_example.py  multiple_formats_example.py
examples/essentials/: configuration.py  flattening_basics.py  processing_modes.py
examples/output/: output_formats.py
examples/performance/: csv_reader_benchmark.py
examples/processing/: csv_processing.py  file_handling.py  json_processing.py
scripts/: bump_version.py  clean.py  deploy_to_pypi.py  fix_markdown.py  run_benchmarks.py  setup_dev.py  test_output_formats.py  update_field_names.py  upgrade_version.py  upgrade_version_and_publish.py
src/transmog/: __init__.py  api.py  api_validation.py  config.py  dependencies.py  exceptions.py  features.py  flattening.py  iterators.py  processor.py  recovery.py  streaming.py  types.py  validation.py
src/transmogrify/: __init__.py  exceptions.py  processor.py  recovery.py
tests/: DEBUGGER.md  README.md  __init__.py  conftest.py  debug_circular_reference.py  test.parquet  transmog_debugger.py
tests/benchmarks/: test_caching_benchmarks.py  test_core_transformation_benchmarks.py  test_csv_implementation_benchmark.py  test_csv_reader_benchmarks.py  test_output_format_benchmarks.py  test_processing_mode_benchmarks.py  test_recovery_strategy_benchmarks.py
tests/config/: test_config_propagation.py  test_settings.py  test_utils.py
tests/core/: test_batch_strategy.py  test_cache.py  test_chunked_strategy.py  test_csv_strategy.py  test_extractor.py  test_file_strategy.py  test_flattener.py  test_hierarchy.py  test_id_discovery.py  test_in_memory_strategy.py  test_metadata.py  test_processor.py
tests/dependencies/: test_dependency_manager.py
tests/error/: test_error_handling.py
tests/fixtures/: sample.csv  sample_bad_format.csv  sample_empty.csv  sample_with_nulls.csv
tests/formats/: test_native_formats.py
tests/helpers/: writer_mixin.py
tests/integration/: conftest.py  test_csv_integration.py  test_deterministic_id_parent_child.py  test_deterministic_ids_integration.py  test_edge_cases_cross_format.py  test_end_to_end.py  test_integration_core.py  test_json_integration.py  test_natural_ids_integration.py  test_orphaned_child.py  test_partial_recovery_integration.py  test_processor_integration.py
tests/interfaces/: test_dependency_interface.py  test_error_handling_interface.py  test_extractor_interface.py  test_flattener_interface.py  test_formats_interface.py  test_hierarchy_interface.py  test_integration_interface.py  test_metadata_interface.py  test_processor_interface.py  test_reader_interface.py  test_settings_interface.py  test_strategy_interface.py  test_streaming_writer_interface.py  test_writer_interface.py
tests/naming/: test_naming.py
tests/performance/: test_processing_speed.py
tests/process/: test_data_iterators.py  test_file_handling.py  test_streaming.py  test_streaming_result.py
tests/readers/: test_csv_reader.py  test_csv_reader_cast_to_string.py  test_json_reader.py
tests/unit/: test_api_flatten.py  (+50 more)
(+255 files in other folders)
