[metadata]
name = transmog
version = 0.1.1
description = An ETL/ELT transformation library for converting nested JSON structures into flat, tabular formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottdraper8/transmog
author = Scott Draper
author_email = admin@scottdraper.io
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database :: Database Engines/Servers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pyarrow>=7.0.0
    orjson>=3.8.0

[options.packages.find]
where = src
